[package]
name = "moonshine-save"
version = "0.3.10"
edition = "2021"
license = "MIT"
description = "Save/Load framework for Bevy"
categories = ["game-development"]
keywords = ["bevy", "save", "load", "serde", "ron"]
readme = "README.md"
homepage = "https://github.com/Zeenobit/moonshine_save"
repository = "https://github.com/Zeenobit/moonshine_save"

[dependencies]
serde = "1.0.*"
bevy_app = "0.16.*"
bevy_ecs = "0.16.*"
bevy_log = "0.16.*"
bevy_platform = "0.16.*"
bevy_reflect = "0.16.*"
bevy_scene = "0.16.*"
bevy_utils = "0.16.*"
moonshine-util = { version = "0.2.6", path = "../util" }

[dev-dependencies]
bevy = "0.16.*"
moonshine-check = { version = "0.1.*", path = "../check" }
